[package]
name = "slog-loggly"
version = "0.4.0"
edition = "2018"
authors = ["Angelcam, Inc."]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/angelcam/rust-slog-loggly"
documentation = "https://docs.rs/slog-loggly"
homepage = "https://github.com/angelcam/rust-slog-loggly"
description = """
This is an unofficial Loggly drain for the slog logging infrastructure in Rust.
"""
categories = ["development-tools::debugging"]
keywords = ["logging", "slog", "loggly"]

[features]
default = ["runtime"]
runtime = []

[dependencies]
bytes       = "0.5"
chrono      = "0.4"
futures     = "0.3"
hyper       = "0.13"
hyper-tls   = "0.4"
serde       = "1.0"
serde_json  = "1.0"
slog        = "2.5"

[dependencies.tokio]
version  = "0.2"
features = ["rt-core", "time"]

[dev-dependencies.tokio]
version    = "0.2"
features = ["full"]
