[package]
name = "slog-loggly"
version = "0.5.1"
edition = "2018"
authors = ["Angelcam, Inc."]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/angelcam/rust-slog-loggly"
documentation = "https://docs.rs/slog-loggly"
homepage = "https://github.com/angelcam/rust-slog-loggly"
description = """
This is an unofficial Loggly drain for the slog logging infrastructure in Rust.
"""
categories = ["development-tools::debugging"]
keywords = ["logging", "slog", "loggly"]

[features]
default = ["http1", "runtime"]
http1 = ["hyper/http1"]
http2 = ["hyper/http2"]
runtime = ["tokio/rt"]

[dependencies]
bytes       = "1"
chrono      = "0.4"
futures     = "0.3"
hyper-tls   = "0.5"
serde       = "1.0"
serde_json  = "1.0"
slog        = "2.5"

[dependencies.hyper]
version = "0.14"
features = ["client", "tcp"]

[dependencies.tokio]
version  = "1"
features = ["time"]

[dev-dependencies.tokio]
version    = "1"
features = ["full"]
