[package]
name = "slog-loggly"
version = "0.6.0"
edition = "2021"
authors = ["Angelcam, Inc."]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/angelcam/rust-slog-loggly"
documentation = "https://docs.rs/slog-loggly"
homepage = "https://github.com/angelcam/rust-slog-loggly"
description = """
This is an unofficial Loggly drain for the slog logging infrastructure in Rust.
"""
categories = ["development-tools::debugging"]
keywords = ["logging", "slog", "loggly"]

[features]
default = ["http1", "runtime"]
http1 = []
http2 = ["reqwest/http2"]
runtime = ["tokio/rt"]

[dependencies]
bytes       = "1"
chrono      = "0.4"
futures     = "0.3"
serde       = "1.0"
serde_json  = "1.0"
slog        = "2.5"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["default-tls"]

[dependencies.tokio]
version  = "1"
features = []
optional = true

[dev-dependencies.tokio]
version    = "1"
features = ["full"]
